grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: kuma-metrics
  annotations:
    konghq.com/strip-path: "true"

spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /monitoring
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana
            port:
              number: 80
